--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <!--EMPLOYEES-->
 
-        <!-- <section class="employees-section">
+        <section class="employees-section">
             <div class="container">
             <h2 class="team">Our Team</h2>
         <ul class="employees-list list">
@@ -369,10 +369,10 @@
         </ul>
         </div>
         </section>
-    </main>  -->
+    </main> 
 
         <!--CUSTOMER-->
-        <!-- 
+        
         <section class="customer">
     <div class="container">
         <h2 class="customers">Customers</h2>
@@ -432,7 +432,7 @@
             </li>
         </ul>
     </div>
-    </section> -->
+    </section> 
 
 
         <!--FOOTER-->
