hw7-final version

--- a/index.html
+++ b/index.html
@@ -437,9 +437,10 @@
 
         <!--FOOTER-->
 
-        <!-- <footer class="footer">
+         <footer class="footer">
         <div class="container footer-info-box"> 
 
+            <div class="special">
             <div class="footer-info">
         <a class="f-logotype link" href="./index.html">
             <span class="web-footer">WEB</span>
@@ -502,6 +503,7 @@
             </svg>
         </button>
         </div>
+    </div>
     </div>
     </div>
     </footer>
@@ -579,7 +581,7 @@
         </div>
     </div>
 
-    <script src="./js/modal.js"></script>  -->
+    <script src="./js/modal.js"></script>  
         <script src="./js/menu.js"></script>
 </body>
 
